[gd_scene load_steps=10 format=3 uid="uid://drpa4emtyqlfk"]

[ext_resource type="Script" path="res://main.gd" id="1_kxj7a"]
[ext_resource type="PackedScene" uid="uid://cafb54snlitpq" path="res://collectable.tscn" id="2_5eard"]
[ext_resource type="PackedScene" uid="uid://dgwbcj75pnvps" path="res://roots.tscn" id="2_qmf5s"]
[ext_resource type="PackedScene" uid="uid://btydbgcfdqphd" path="res://obstacle.tscn" id="3_tlp4n"]
[ext_resource type="PackedScene" uid="uid://bmxdlthmoupb0" path="res://hud.tscn" id="3_tumxr"]
[ext_resource type="Texture2D" uid="uid://vsrth15j78iw" path="res://soil.png" id="6_t4eyi"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8f2c2"]
normal = Vector2(1, 0)
distance = -480.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6new2"]
normal = Vector2(-1, 0)
distance = -480.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_u1vtg"]
size = Vector2(960, 640)

[node name="main" type="Node"]
script = ExtResource("1_kxj7a")
depth_multiplier = 0.1
level_multiplier = 1.0
level_length = 4000.0
max_level = 10
min_growth_speed = 150.0
max_growth_speed = 500.0
min_next_collectable_depth = 128.0
max_next_collectable_depth = 512.0
points_per_collectable = 800.0
min_next_obstacle_depth = 256.0
max_next_obstacle_depth = 512.0
collectable = ExtResource("2_5eard")
static_obstacle = ExtResource("3_tlp4n")
roots = ExtResource("2_qmf5s")

[node name="border" type="Area2D" parent="."]

[node name="left" type="CollisionShape2D" parent="border"]
shape = SubResource("WorldBoundaryShape2D_8f2c2")

[node name="right" type="CollisionShape2D" parent="border"]
shape = SubResource("WorldBoundaryShape2D_6new2")

[node name="HUD" parent="." instance=ExtResource("3_tumxr")]

[node name="background" type="Node2D" parent="."]

[node name="camera" type="Camera2D" parent="background"]

[node name="Parallax2D" type="Parallax2D" parent="background"]
repeat_size = Vector2(0, 1024)
repeat_times = 3

[node name="TextureRect" type="TextureRect" parent="background/Parallax2D"]
z_index = -2
texture_filter = 1
offset_left = -512.0
offset_right = 512.0
offset_bottom = 1024.0
texture = ExtResource("6_t4eyi")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="background"]
z_index = -1
texture_filter = 1
offset_left = -480.0
offset_top = -640.0
offset_right = -440.0
offset_bottom = -600.0
texture = SubResource("PlaceholderTexture2D_u1vtg")

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="game_over" from="." to="HUD" method="_on_game_over"]
[connection signal="game_start" from="." to="." method="_on_game_start"]
[connection signal="game_start" from="." to="HUD" method="_on_game_start"]
[connection signal="next_level" from="." to="." method="_on_next_level"]
[connection signal="start_button_pressed" from="HUD" to="." method="_start_game"]
